# NovaFetch

./: Cargo.toml  README.md  config.toml.example
src/: config.rs  main.rs
src/info/: bar.rs  components.rs  cpu.rs  de_wm.rs  disk.rs  gpu.rs  kernel.rs  memory.rs  mod.rs  os.rs  os_age.rs  packages.rs  palette.rs  resolution.rs  shell.rs  swap.rs  terminal.rs  terminal_font.rs  theme.rs  uptime.rs  user_host.rs  utils.rs
src/modules/: gpu.rs  media.rs  mod.rs  net.rs
src/ui/: ascii.rs  ascii_data.rs  gradient.rs  image_render.rs  logos.rs  mod.rs  render.rs  theme.rs
