[package]
name = "novafetch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2.1"
display-info = "0.5"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
toml = "0.8"
whoami = "1.4"
